# sdm_bio_vinaceous-breasted-amazon

./: .gitignore  .gitmodules  README.md  mkdocs.yml  pyproject.toml
docs/: data.md  features.md  model.md  overview.md  references.md  steps.md
src/: utils.py
src/notebooks/: create_function.ipynb  models.ipynb  models2.ipynb  overview.ipynb  ploting.ipynb  pre-validate.ipynb  removing_clustering.ipynb  test.ipynb
src/scripts/: config.toml  rasters.py  test.py
src/stages/: 00_stage_prepare_data_folders.py  01_stage_pre_process.py  02_stage_thin_occurences.py  03_stage_create_background_points.py  04_stage_crop_files.py  05_stage_feature_selection.py  06_stage_create_models.py  07_stage_create_models_pipeline.py  08_stage_generate_models_results_output.py  09_stage_generate_reports.py  10_stage_generate_prob.py  config.toml  run.bat  stage_create_background_points.py  stage_pre_process.py  stage_thin_occurences.py
