[tool.poetry]
name = "sdm-bio-vinaceous-breasted-amazon"
version = "0.1.0"
description = ""
authors = ["Marcelo-Kenji-Noda <54538758+Marcelo-Kenji-Noda@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
